# Among-Us

./: .gitignore  CMakeLists.txt  README.md
libraries/glfw/: README.md
libraries/glfw/docs/: CONTRIBUTING.md  compile.dox  input.dox  window.dox
libraries/glfw/include/GLFW/: glfw3.h
libraries/glm/doc/api/: a00001_source.html
source/: bomb.cpp  bomb.h  button.cpp  button.h  camera.cpp  camera.h  character.cpp  character.h  coin.cpp  coin.h  game.cpp  game.h  imposter.cpp  imposter.h  main.cpp  maze.cpp  maze.h  movable_sprite.cpp  movable_sprite.h  player.cpp  player.h  shader.cpp  shader.h  shape.cpp  shape.h  sprite.cpp  sprite.h  temp.cpp  text_handler.cpp  text_handler.h  util.cpp  util.h  vertices.h  window.cpp  window.h
source/fragment_shaders/: light_shader.frag  shader.frag  text_shader.frag
source/vertex_shaders/: light_shader.vert  shader.vert  text_shader.vert
